import mongoose, { Schema, Document } from "mongoose";
// Import các schema phụ (Unit, Category, TypeMedicine)

// Interface for Medicine model
interface IMedicine extends Document {
  name: string;
  image: string;
  strength: string;
  generic: string;
  unit_id: { type: Schema.Types.ObjectId; ref: "Unit" }; // Reference to Unit collection
  category_id: { type: Schema.Types.ObjectId; ref: "Category" }; // Reference to Category collection
  type_id: { type: Schema.Types.ObjectId; ref: "TypeMedicine" }; // Reference to Type collection
  supplier: string;
  supplier_price: number;
  bar_code: string;
  description?: string;
  price: number;
  prescription_required?: boolean; // Thuốc kê đơn
  max_quantity_per_day?: number; // Giới hạn số lượng mua trong ngày
  max_quantity_per_month?: number; // Giới hạn số lượng mua trong tháng (30 ngày)
  createdAt?: Date;
  updatedAt?: Date;
  stocks?: any[]; // Trường ảo để chứa stocks
}

// Medicine Schema definition
const MedicineSchema = new Schema<IMedicine>(
  {
    name: { type: String, required: true },
    description: String,
    price: Number,
    image: String,
    strength: String,
    generic: String,
    unit_id: { type: Schema.Types.ObjectId, ref: "Unit" }, // Corrected type
    category_id: { type: Schema.Types.ObjectId, ref: "Category" }, // Corrected type
    type_id: { type: Schema.Types.ObjectId, ref: "TypeMedicine" }, // Corrected type
    supplier: String,
    supplier_price: Number,
    bar_code: String,
    prescription_required: { type: Boolean, default: false }, // Thuốc kê đơn
    max_quantity_per_day: { type: Number, default: null }, // Giới hạn số lượng mua trong ngày (null = không giới hạn)
    max_quantity_per_month: { type: Number, default: null }, // Giới hạn số lượng mua trong tháng - 30 ngày (null = không giới hạn)
  },
  { 
    timestamps: true,
    toJSON: { virtuals: true },
    toObject: { virtuals: true }
  }
);

// Định nghĩa trường ảo stocks
MedicineSchema.virtual('stocks', {
  ref: 'Stock',
  localField: '_id',
  foreignField: 'medicine'
});

MedicineSchema.set("toJSON", {
  transform: (doc, ret) => {
    // Đổi tên trường trả về
    ret.unit = ret.unit_id;
    ret.category = ret.category_id;
    ret.type = ret.type_id;

    // Xóa các trường _id cũ và các trường không cần thiết
    delete ret.unit_id;
    delete ret.category_id;
    delete ret.type_id;

    return ret;
  },
  virtuals: true
});

// Create and export the model
export default mongoose.models.Medicine ||
  mongoose.model<IMedicine>("Medicine", MedicineSchema);
