@startuml
' Core domain class diagram (simplified)
skinparam classAttributeIconSize 0
hide circle

class Medicine {
  +name: string
  +price: number
  +strength: string
  +generic: string
  +bar_code: string
  +prescription_required: boolean
}
class Category
class TypeMedicine
class Unit
class Supplier {
  +name: string
  +phone: string
  +balance: number
}
class Purchase {
  +date: Date
  +invoice_no: string
  +payment_type: string
  +total: number
  +paid: number
  +due: number
}
class PurchaseItem {
  +batch_id: string
  +expiry_date: Date
  +box_pattern: string
  +box_quantity: number
  +unit_quantity: number
  +supplier_price: number
  +mrp: number
}
class Stock {
  +batch_id: string
  +expiry_date: Date
  +box_quantity: number
  +unit_quantity: number
  +purchase_price: number
  +mrp: number
}
class Customer {
  +customer_id: string
  +full_name: string
  +contact_info
}
class Invoice {
  +invoice_no: string
  +date: Date
  +subtotal: number
  +grand_total: number
  +paid: number
  +due: number
  +payment_method: string
  +is_pos: boolean
}
class InvoiceItem {
  +medicine_name: string
  +batch_id: string
  +quantity: number
  +price: number
  +vat: number
  +subtotal: number
}
class Voucher {
  +voucher_code: string
  +discount_type: percentage|fixed
  +discount_value: number
  +status: string
}
class VoucherUsage {
  +discount_amount: number
  +used_date: Date
}
class Shipping {
  +shipping_code: string
  +recipient_name: string
  +status: string
  +shipping_fee: number
  +is_cod: boolean
}
class User {
  +email: string
  +password: string
  +role: string
}
class Employee {
  +full_name: string
  +phone: string
}
class Shift {
  +shift_date: Date
  +shift_type: string
  +status: string
  +opening_balance: number
  +closing_balance: number
}
class Benefit {
  +benefit_type: string
  +amount: number
  +status: string
}

' Relationships
Medicine --> Category
Medicine --> TypeMedicine
Medicine --> Unit
Purchase "1" -- "*" PurchaseItem
PurchaseItem --> Medicine
Purchase --> Supplier
Stock --> Medicine
Stock --> Purchase
Invoice "1" -- "*" InvoiceItem
InvoiceItem --> Medicine
Invoice --> Customer
Invoice --> Voucher
Invoice --> Shift
VoucherUsage --> Voucher
VoucherUsage --> Customer
VoucherUsage --> Invoice
Shipping --> Invoice
Employee --> User
Shift --> Employee
Benefit --> Employee

@enduml
